--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@ label {
             <div class="masthead-content">
                 <div class="container px-5">
          <form id="search" method="GET" action="http://www.google.com/search" target="_blank">
-                    <input type="search" placeholder="Search" onkeyup="myFunction()">
+                    <input type="search" placeholder="Search..." onkeyup="myFunction()">
                     <br>
                     <br>
                     <br>
