--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@ label {
                 </div>
 
   
-
+  <a href="https://github.com/mozask/mozask.github.io/archive/refs/heads/main.zip">Download site</a>
             </div>
             <div class="bg-circle-1 bg-circle"></div>
             <div class="bg-circle-2 bg-circle"></div>
